# HPC_projet_1

./: CMakeLists.txt  main.cpp  readme.md
data/output/: image_debevec_crf.hdr
include/: piccante.hpp
include/algorithms/: hdr_merger.hpp
include/filtering/: filter_warp_2d.hpp
include/gl/tone_mapping/: hybrid_tmo.hpp
include/util/: string.hpp
include/util/gl/: redux.hpp
